# PPT

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
contrib/gui_quarantined/iop_flow_gui/views/: home.py  run_all.py
contrib/gui_quarantined/iop_flow_gui/wizard/: state.py  step_csa.py  step_geometry.py  step_runners.py  step_validate.py
data/: preset_k20a2.json
docs/: ARCHITECTURE.md  DATA_MODEL.md  FORMULAS.md
scripts/: gen_k20a2_artifacts.py
src/iop_flow/: __init__.py  api.py  cli.py  compare.py  compute_point.py  compute_series.py  engine_link.py  formulas.py  hp.py  io_json.py  normalize.py  schemas.py  tuning.py
src/iop_flow_cli/: main.py
src/iop_flow_core/: __init__.py
src/iop_flow_core/presets/: k20a2.json
src/iop_flow_gui/: __init__.py  app.py  main.py  preferences.py
src/iop_flow_gui/views/: compare.py  run_all.py
src/iop_flow_gui/widgets/: mpl_canvas.py
src/iop_flow_gui/wizard/: state.py  step_bench.py  step_csa.py  step_engine.py  step_exhaust.py  step_geometry.py  step_measurements.py  step_plan.py  step_report.py  step_runners.py  step_start.py  step_validate.py  wizard.py
tests/: __init__.py  test_api.py  test_canvas_plot_xy.py  test_cli.py  test_compare.py  test_compare_view_and_api.py  test_compute_series.py  test_defaults_preset_sanity.py  test_demo_preset_sanity.py  test_engine_link.py  test_fixtures_e2e.py  test_formulas_sanity.py  test_gen_k20a2_artifacts.py  test_gui_smoke.py  test_hp.py  test_import_step_exhaust.py  test_normalize.py  test_pitot.py  test_preferences_and_parser.py  test_runner_and_plenum.py  test_schemas_io.py  test_session_roundtrip.py  test_session_roundtrip_extended.py  test_state_tuning.py  test_tuning.py  test_tuning_calcs.py  test_tuning_exhaust.py  test_unit_conversions.py  test_wizard_autocompute.py  test_wizard_b4_smoke.py  test_wizard_csa_exhaust_unit.py  test_wizard_export_unit.py  test_wizard_measurements_unit.py  test_wizard_plan_unit.py  test_wizard_smoke.py
tests/data/: after.json  before.json  session_intake_exhaust.json  session_intake_only.json
tools/: smoke_tuning.py
