[project]
name = "iop-flow"
version = "0.1.0"
description = "Core obliczeń (bez GUI) dla narzędzia portingu głowic: formuły, normalizacja, testy."
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.scripts]
iop-flow = "iop_flow.cli:main"
iop-flow-cli = "iop_flow_cli.main:main"

[project.optional-dependencies]
cli = [
	"typer>=0.12",
]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
pretty = true

[[tool.mypy.overrides]]
module = ["iop_flow.formulas"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["iop_flow_cli", "iop_flow_core", "iop_flow_core.*"]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
